--- a/htmlStrukturDanTugas/tugas25.html
+++ b/htmlStrukturDanTugas/tugas25.html
@@ -20,15 +20,24 @@
     </nav>
     <main>
         <article>
-            <h2>Mengenal Sematic Elements Di HTML5</h2>
+            <h3>Mengenal Sematic Elements Di HTML5</h3>
             <section>
                 <ul>
                     <li>Article</li>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quam autem, sunt necessitatibus officia porro maxime dolorem in eos atque voluptatum asperiores, facilis dolor excepturi soluta recusandae magnam! Mollitia, eligendi?</p>
+                        <p>Ketika kita ingin membuat layout untuk menampilkan block artikel-artikel yang ada di website kita, tag article bisa kita gunakan dengan element header dan footer.<br> Karena tag article memiliki type block, artinya element ini memiliki lebar sesuai lebar browser jika kita tidak menentukan lebarnya.</p>
+                        <p></p>
                     <li>Aside</li>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quia laborum consequuntur accusantium pariatur enim ducimus quidem laudantium, eveniet illum, esse facere perspiciatis quibusdam labore excepturi non tempore fugit mollitia.</p>
+                        <p>Element ini bisa kita gunakan untuk melengkapi layout utama. Misal kita memiliki halaman blog maka kita bisa menambahkan aside di bagian bawah postingan untuk memperjelaskan identitas penulis artikel.<br> Karena aside memuliki type/sifat block maka lebarnya sesuai page jika kita tidak menentukan lebarnya.</p>
                 </ul>
             </section>
+            <aside>
+                <h2>Artikel Terbaru</h2>
+                <ul>
+                    <li> <a href="#">HTML</li>
+                    <li> <a href="#">PHP</li>
+                    <li> <a href="#">Javascript</li>
+                </ul>
+            </aside>
         </article>
     </main>
     <footer>
